nessie-android-sdk/src/test/java/com/reimaginebanking/api/nessieandroidsdk/AccountTest.java
package com.reimaginebanking.api.nessieandroidsdk;

/**
 * Tests all account endpoints against mock responses.
 */
public class AccountTest extends NessieTest {

    /* GET /accounts */


    /* GET /account/{id} */


    /* GET /customer/{id}/accounts */


    /* POST /customer/{id}/accounts */


    /* PUT /accounts/{id} */


    /* DELETE /accounts/{id} */

    // success
    // error
}
